--- a/Registration.html
+++ b/Registration.html
@@ -34,13 +34,13 @@
           return liff.getProfile();
         } else {
           liff.login({
-            redirectUri: "Redirect URL",
+            redirectUri: "https://docs.google.com/forms/d/e/1FAIpQLSd7TF7NvNTtdSwh0HADH-VOySBr6t7mcDHuxLNiusXJN8BXRA/viewform?usp=pp_url&entry.467254449=${profile.userId}&entry.1559541434=${profile.displayName}",
           });
         }
       })
       .then((profile) => {
         window.location.replace(
-          `Paste Google Form URL and map your parameters here`
+          `https://docs.google.com/forms/d/e/1FAIpQLSd7TF7NvNTtdSwh0HADH-VOySBr6t7mcDHuxLNiusXJN8BXRA/viewform?usp=pp_url&entry.467254449=${profile.userId}&entry.1559541434=${profile.displayName}`
         );
       });
     liff.init(
