--- a/Registration.html
+++ b/Registration.html
@@ -61,11 +61,13 @@
 
             <!-- Popup container -->
             <div id="popup2" class="popup overlay">
-                <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                <lottie-player src="https://lottie.host/0ffb70c8-7c30-4a23-87fb-c05b5448a0ee/H1vXApaVSG.json"
-                    background="transparent" speed="1" style="margin-top: -150px; width: 300px; height: 300px;" loop
-                    autoplay></lottie-player>
-                <p style="margin-top: -60px !important; text-align: center !important;">Please wait, loading...</p>
+                <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+                type="module"></script>
+
+            <dotlottie-player src="https://lottie.host/775cb6c2-593e-4dfb-a56f-73c4d846ab09/YCfEhQP7LO.json"
+                background="transparent" speed="1" style="width: 300px; height: 300px;" loop
+                autoplay></dotlottie-player>
+            <p style="margin-top: 0px !important;">Please wait, loading...</p>
             </div>
         </div>
     </main>
